--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 
 	<target name="compile">
 		<mkdir dir="${classes.dir}"/>
-		<javac includeantruntime="false" srcdir="${src.dir}" destdir="${classes.dir}"/>
+		<javac includeantruntime="false" srcdir="${src.dir}" destdir="${classes.dir}" debug="true"/>
 	</target>
 
 	<target name="jar" depends="compile">
